# ring_api

./: Cargo.toml  README.md
examples/: simple.rs
src/: client.rs  error.rs  job.rs  lib.rs  multipart.rs  settings.rs
src/requests/: mod.rs  result.rs  status.rs  submit.rs
